--- a/atividade09.html
+++ b/atividade09.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media="all">
+    <link rel="stylesheet" type="text/css" href="./css/style.css" media="all">
 </head>
 <body>
     <h1>Boxmodel CSS</h1>
+    <h2>texto para ajudar</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt accusamus dolores maiores tenetur sed, facere fugit consequatur eligendi placeat, doloribus unde adipisci odio deleniti provident commodi necessitatibus minima voluptatibus nobis!</p>
 </body>
 </html>
