--- a/atividade06.html
+++ b/atividade06.html
@@ -3,26 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicação CSS Incorporada</title>
-    <style>
-        p{
-            color: blanchedalmond;
-            background-color: crimson;
-        }
-        h2 {
-            text-align: center;
-        }
-    </style>
+    <title>Aplicação CSS Inline</title>
 </head>
 <body>
-    <!--CSS Incorporado-->
-    <h2>Texto Centralizado</h2>
-    <p>
-        Demonstração de CSS Incorporado
-    </p>
-    <!--devido ao stilo já pré-definido em head, o próximo p ou h2 usado ficará com o mesmo estilo-->
-    <p>
-        Parágrafo para demonstração de continuidade
-    </p>
+    <!--aplicação de CSS inline-->
+    <h2 style="text-align: center;">Título Centralizado</h2>
+    <p style="color: tomato; background-color:aquamarine;">Teste cor do texto</p>   
 </body>
 </html>
